# PAL_working

./: .flake8  .gitattributes  .gitignore  CLAUDE.md  README.md  bench_cost.py  pyproject.toml  rerun_eval.py  rerun_sweep.sh  run_multiseed.sh  run_pipeline.sh
configs/: default.yaml
configs/clip/: clip_eval.yaml
configs/dryrun/: dryrun.yaml  dryrun_ba.yaml  dryrun_ba_token.yaml  dryrun_csa.yaml  dryrun_fa.yaml  dryrun_mlp.yaml  dryrun_reslowrank.yaml  dryrun_retrieval.yaml  dryrun_structure.yaml  smoke_cls.yaml  smoke_cls_pinned.yaml  smoke_cls_unpinned.yaml  smoke_eval.yaml  smoke_state_dict.yaml
docker/: Dockerfile  README.md  docker-compose.yml  launch.sh  requirements.txt  run.sh  setup_server.sh
docs/: asif_fixed_anchor_baseline.ko.md  cl_benchmark_plan.ko.md  data_setup.md  dino_clip_alignment.md  encoder_diversity_findings.ko.md  karpathy_split_setup.md  laion_reimplementation_TODO.md  pal_generative_vlm_plan.ko.md  pipeline_file_usage.ko.md  pipeline_file_usage.md  pipeline_overview.ko.md  pipeline_overview.md  reconstruction_plan.md
scripts/: migrate_checkpoints.py  run_pipeline.sh  verify_alignment_checkpoint.py  verify_cache_suffix.py  verify_migration_roundtrip.py
scripts/batch2_eval/: run_classification.sh  (+1 more)
src/: eval.py  extract.py  extract_features.py  measure_alignment.py  train.py  train_alignment.py  train_subset.py
viz/: anchor_attention_heatmap.py  anchor_cross_modal.py  anchor_group_filter.py  anchor_pair_finder.py  anchor_pair_grid_batch.py  anchor_random_focused.py  compute_coco_profiles.py  qualitative_segmentation.py  viz_utils.py
(+218 files in other folders)
